# RajLang

./: .clang-format  .gitignore  CMakeLists.txt  LEXER.md  README.md  compile.sh  tree_visualization.dot
examples/: anon_func.am  anon_func.raj  declaration_array.raj  declaration_basic.am  declaration_basic.raj  declaration_map.am  declaration_map.raj  function_calling.raj  multiple_return.raj
src/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp  logging.hpp  raj.cpp
test/: test_ast_parsing.cpp  test_main.cpp
